--- a/leads_demo.html
+++ b/leads_demo.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Applicants Management - Vue.js Demo</title>
+    <title>Student Applicants Management - Demo</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://unpkg.com/vue@2/dist/vue.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -15,7 +16,6 @@
                         secondary: '#64748b',
                         success: '#22c55e',
                         warning: '#f59e0b',
-                        danger: '#ef4444',
                         info: '#0ea5e9',
                         dark: '#1e293b',
                         light: '#f8fafc'
