--- a/frontend/unity-spa/features/registrar/reports.html
+++ b/frontend/unity-spa/features/registrar/reports.html
@@ -14,12 +14,43 @@
 
   <div class="bg-white rounded shadow divide-y">
     <div class="p-6">
-      <h3 class="text-lg font-semibold text-gray-800 mb-2">Reports</h3>
-      <p class="text-gray-600 mb-4">Open the Registrar reports in the legacy CI app.</p>
-      <a class="inline-flex items-center px-3 py-2 rounded bg-indigo-600 text-white hover:bg-indigo-700"
-         ng-href="{{ vm.links.registrarReports }}" target="_blank" rel="noopener">
-        <span class="fas fa-external-link-alt mr-2"></span> Open CI Registrar Reports
-      </a>
+      <h3 class="text-lg font-semibold text-gray-800 mb-2">Reports</h3>      
+      <div class="flex flex-wrap gap-3 items-center">        
+        <!-- SPA Daily Enrollment link -->
+        <a class="inline-flex items-center px-3 py-2 rounded bg-purple-600 text-white hover:bg-purple-700"
+           ng-href="#!/registrar/daily-enrollment">
+          <span class="fas fa-chart-bar mr-2"></span> Open Daily Enrollment (SPA)
+        </a>
+        <!-- Divider -->
+        <span class="text-gray-300">|</span>
+        <!-- Enrolled Students Export -->
+        <button type="button"
+                class="inline-flex items-center px-3 py-2 rounded bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-60"
+                ng-click="vm.exportEnrolled()"
+                ng-disabled="vm.loading">
+          <span class="fas fa-file-excel mr-2"></span>
+          <span ng-if="!vm.loading">Export Enrolled Students</span>
+          <span ng-if="vm.loading" class="inline-flex items-center">
+            <svg class="animate-spin h-4 w-4 mr-2 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+              <circle class="opacity-30" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+              <path class="opacity-90" fill="currentColor" d="M4 12a8 8 0 018-8v4A4 4 0 008 12H4z"></path>
+            </svg>
+            Preparing...
+          </span>
+        </button>
+
+        <!-- Selected term indicator -->
+        <span class="text-sm text-gray-600" ng-if="vm.selectedTerm">
+          Term: {{ vm.selectedTerm.enumSem }} {{ vm.selectedTerm.term_label }} {{ vm.selectedTerm.strYearStart }}-{{ vm.selectedTerm.strYearEnd }}
+        </span>
+      </div>
+
+      <!-- Error message -->
+      <div class="mt-3" ng-if="vm.error">
+        <div class="px-3 py-2 bg-red-50 text-red-700 rounded border border-red-200 text-sm">
+          <span class="fas fa-exclamation-triangle mr-2"></span>{{ vm.error }}
+        </div>
+      </div>
     </div>
 
     <div class="p-6">
