--- a/frontend/unity-spa/features/students/viewer.html
+++ b/frontend/unity-spa/features/students/viewer.html
@@ -15,8 +15,13 @@
       <a class="px-3 py-1 bg-gray-100 hover:bg-gray-200 rounded mr-2" ng-href="{{ vm.editUrl() }}">
         <i class="fas fa-edit mr-1"></i> Edit (legacy)
       </a>
-      <a class="px-3 py-1 bg-gray-100 hover:bg-gray-200 rounded" ng-href="{{ vm.financesUrl() }}">
+      <a class="px-3 py-1 bg-gray-100 hover:bg-gray-200 rounded mr-2" ng-href="{{ vm.financesUrl() }}">
         <i class="fas fa-coins mr-1"></i> Finances (legacy)
+      </a>
+      <a class="px-3 py-1 bg-blue-600 text-white hover:bg-blue-700 rounded"
+         ng-if="vm.state && vm.state.roles && (vm.state.roles.indexOf('registrar') !== -1 || vm.state.roles.indexOf('admin') !== -1)"
+         ng-href="{{ '#/students/' + vm.id + '/records' + (vm.sn ? ('?sn=' + vm.sn) : '') }}">
+        <i class="fas fa-clipboard-list mr-1"></i> Records
       </a>
     </div>
     <div class="text-sm text-gray-400" ng-if="!vm.sn">
@@ -202,6 +207,135 @@
         <pre class="text-xs bg-gray-50 p-3 rounded overflow-x-auto">{{ vm.ledger | json }}</pre>
       </div>
       <div ng-if="!vm.ledger && !vm.loading.ledger" class="text-sm text-gray-500">No data</div>
+    </div>
+  </div>
+
+  <!-- Checklist -->
+  <div class="bg-white shadow rounded" ng-if="false">
+    <div class="px-4 py-3 border-b border-gray-200 flex items-center justify-between">
+      <h2 class="text-lg font-medium text-gray-700">
+        <i class="fas fa-tasks mr-2"></i> Checklist
+      </h2>
+      <div class="text-sm text-gray-500" ng-if="vm.loading.checklist || vm.loading.checklistAction">
+        <i class="fas fa-spinner fa-spin mr-1"></i> Working...
+      </div>
+      <div class="text-sm text-red-600" ng-if="vm.error.checklist">{{ vm.error.checklist }}</div>
+      <div class="text-sm text-red-600" ng-if="vm.error.checklistAction">{{ vm.error.checklistAction }}</div>
+    </div>
+    <div class="p-4 space-y-4">
+      <!-- Summary -->
+      <div class="p-3 bg-gray-50 rounded" ng-if="vm.checklistSummary">
+        <div class="flex items-center justify-between">
+          <div class="text-sm text-gray-600">
+            <span class="mr-4">Total: <span class="font-semibold">{{ vm.checklistSummary.total }}</span></span>
+            <span class="mr-4">Required: <span class="font-semibold">{{ vm.checklistSummary.required }}</span></span>
+            <span class="mr-4">Completed: <span class="font-semibold">{{ vm.checklistSummary.completed }}</span></span>
+            <span>Remaining: <span class="font-semibold">{{ vm.checklistSummary.remaining }}</span></span>
+          </div>
+          <div class="text-sm font-semibold text-gray-700">
+            {{ vm.checklistSummary.percent }}%
+          </div>
+        </div>
+      </div>
+
+      <!-- Generate form -->
+      <div class="border rounded p-3">
+        <div class="text-sm text-gray-600 mb-2">
+          Generate from current curriculum.
+        </div>
+        <div class="flex flex-wrap items-center gap-3">
+          <button class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700"
+                  ng-click="vm.generateChecklist()"
+                  ng-disabled="vm.loading.checklistAction">
+            <i class="fas fa-magic mr-1"></i> Generate
+          </button>
+        </div>
+      </div>
+
+      <!-- Items table -->
+      <div ng-if="vm.checklist && vm.checklist.items && vm.checklist.items.length">
+        <div class="overflow-x-auto">
+          <table class="min-w-full divide-y divide-gray-200">
+            <thead class="bg-gray-50">
+              <tr>
+                <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Subject Code</th>
+                <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Description</th>
+                <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Units</th>
+                <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Year Level</th>
+                <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Semester</th>
+                <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
+                <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Completed</th>
+                <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Required</th>
+                <th class="px-3 py-2"></th>
+              </tr>
+            </thead>
+            <tbody class="bg-white divide-y divide-gray-200">
+              <tr ng-repeat="it in vm.checklist.items track by it.id">
+                <td class="px-3 py-2 text-sm text-gray-900">{{ (it.subject &amp;&amp; it.subject.code) || '-' }}</td>
+                <td class="px-3 py-2 text-sm text-gray-900">{{ (it.subject &amp;&amp; it.subject.description) || '-' }}</td>
+                <td class="px-3 py-2 text-sm text-gray-900">{{ (it.subject &amp;&amp; it.subject.units) || '-' }}</td>
+                <td class="px-3 py-2 text-sm text-gray-900">
+                  <select class="border rounded px-2 py-1"
+                          ng-model="it.intYearLevel"
+                          ng-options="n as n for n in [1,2,3,4]"
+                          ng-change="vm.updateChecklistItem(it)">
+                    <option value=""></option>
+                  </select>
+                </td>
+                <td class="px-3 py-2 text-sm text-gray-900">
+                  <select class="border rounded px-2 py-1"
+                          ng-model="it.intSem"
+                          ng-options="n as (n === 1 ? '1st' : (n === 2 ? '2nd' : '3rd')) for n in [1,2,3]"
+                          ng-change="vm.updateChecklistItem(it)">
+                    <option value=""></option>
+                  </select>
+                </td>
+                <td class="px-3 py-2 text-sm text-gray-900">
+                  <select class="border rounded px-2 py-1" ng-model="it.strStatus" ng-change="vm.updateChecklistItem(it)">
+                    <option value="planned">planned</option>
+                    <option value="in-progress">in-progress</option>
+                    <option value="passed">passed</option>
+                    <option value="failed">failed</option>
+                    <option value="waived">waived</option>
+                  </select>
+                </td>
+                <td class="px-3 py-2 text-sm text-gray-900">
+                  <input type="date" class="border rounded px-2 py-1" ng-model="it.dteCompleted" ng-change="vm.updateChecklistItem(it)" />
+                </td>
+                <td class="px-3 py-2 text-sm text-gray-900">
+                  <input type="checkbox" ng-model="it.isRequired" ng-change="vm.updateChecklistItem(it)" />
+                </td>
+                <td class="px-3 py-2 text-right">
+                  <button class="px-2 py-1 bg-red-600 text-white rounded hover:bg-red-700"
+                          ng-click="vm.removeChecklistItem(it)"
+                          ng-disabled="vm.loading.checklistAction">
+                    <i class="fas fa-trash mr-1"></i> Remove
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div ng-if="vm.checklist && (!vm.checklist.items || !vm.checklist.items.length)" class="text-sm text-gray-500">
+        No items found in checklist.
+      </div>
+
+      <!-- Add subject -->
+      <div class="border rounded p-3">
+        <div class="flex items-center gap-3">
+          <div>
+            <label class="block text-xs text-gray-500">Subject ID</label>
+            <input type="number" class="border rounded px-2 py-1" ng-model="vm.addSubjectId" placeholder="Enter Subject ID" />
+          </div>
+          <button class="px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700"
+                  ng-click="vm.addChecklistItem()"
+                  ng-disabled="!vm.checklist || !vm.checklist.id || !vm.addSubjectId || vm.loading.checklistAction">
+            <i class="fas fa-plus mr-1"></i> Add
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
