--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -8,7 +8,8 @@
   <!-- Tailwind CSS via CDN (ok for dev; replace for production) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Font Awesome for icons used in templates -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-jLKHWMZtY8QxB8T0ZVvQbFJ6rVhUxGJPD7WvVManIeZDV4mQdlqzTeWY5Avzkdx6" crossorigin="anonymous">
+  <!-- Remove SRI to avoid integrity mismatch in some environments; jsDelivr fallback remains below -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
   <!-- Fallback Font Awesome (jsDelivr) and safety weight fix -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
   <style>
@@ -16,9 +17,100 @@
     .fas { font-weight: 900 !important; }
   </style>
 
+  <!-- Pre-bootstrap normalization: fix malformed hash paths like '#//registrar/...'
+       This must run BEFORE Angular is loaded to prevent $location:badpath on initial parse. -->
+  <script>
+    (function () {
+      try {
+        var h = window.location.hash || '';
+        // Normalize any leading double-slashes after the hash to a single slash
+        var fixed = h.replace(/^#\/{2,}/, '#\/');
+        if (fixed !== h) {
+          // Use replace() to avoid polluting history
+          var href = window.location.href.replace(h, fixed);
+          window.location.replace(href);
+        }
+      } catch (e) {
+        // swallow
+      }
+    })();
+  </script>
+
   <!-- AngularJS 1.x and ngRoute -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.3/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.3/angular-route.min.js"></script>
+  <!-- SweetAlert2 for nicer confirms/alerts -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- Select2 for enhanced selects (requires jQuery) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+  <!-- Select2 theming to match Tailwind input styles -->
+  <style>
+    /* Ensure Select2 fills container */
+    .select2-container { width: 100% !important; }
+
+    /* Match Tailwind input: border, radius, padding, height */
+    .select2-container .select2-selection--single {
+      height: 2.5rem; /* ~40px */
+      border: 1px solid #d1d5db; /* gray-300 */
+      border-radius: 0.25rem; /* rounded */
+      padding: 0.375rem 0.75rem; /* py-1.5 px-3 */
+      display: flex;
+      align-items: center;
+      background-color: #fff;
+    }
+
+    .select2-container--default .select2-selection--single .select2-selection__rendered {
+      color: #111827; /* gray-900 */
+      line-height: 1.25rem;
+      padding-left: 0;
+      margin-left: 0;
+    }
+
+    .select2-container--default .select2-selection--single .select2-selection__placeholder {
+      color: #6b7280; /* gray-500 */
+    }
+
+    .select2-container--default .select2-selection--single .select2-selection__arrow {
+      height: 100%;
+      right: 0.5rem;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    /* Focus ring to match Tailwind focus:ring-blue-500 */
+    .select2-container--default .select2-selection--single:focus,
+    .select2-container--default .select2-selection--single:focus-within,
+    .select2-container--default.select2-container--focus .select2-selection--single {
+      outline: none;
+      border-color: #3b82f6; /* blue-500 */
+      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.3);
+    }
+
+    /* Dropdown styling */
+    .select2-dropdown {
+      border-color: #d1d5db; /* gray-300 */
+      border-radius: 0.25rem;
+      overflow: hidden;
+    }
+
+    .select2-search--dropdown .select2-search__field {
+      border: 1px solid #d1d5db;
+      border-radius: 0.25rem;
+      padding: 0.375rem 0.75rem;
+    }
+
+    .select2-results__option--highlighted.select2-results__option--selectable {
+      background-color: #3b82f6; /* blue-500 */
+      color: #fff;
+    }
+
+    .select2-results__option--selected {
+      background-color: #e5e7eb; /* gray-200 */
+      color: #111827;
+    }
+  </style>
 
   <!-- Runtime base/config bootstrap -->
   <script>
@@ -90,6 +182,8 @@
   <!-- Sidebar component -->
   <script src="shared/components/sidebar/sidebar.controller.js"></script>
   <script src="shared/components/sidebar/sidebar.directive.js"></script>
+  <!-- Shared directives -->
+  <script src="shared/directives/select2.directive.js"></script>
 
   <!-- Features -->
   <script src="features/auth/auth.service.js"></script>
@@ -102,11 +196,17 @@
   <script src="features/faculty/classes.controller.js"></script>
 
   <!-- Registrar/Finance/Scholarship placeholders -->
+  <script src="features/registrar/reports.service.js"></script>
   <script src="features/registrar/reports.controller.js"></script>
+  <!-- Daily Enrollment (SPA) -->
+  <script src="features/registrar/daily-enrollment.service.js"></script>
+  <script src="features/registrar/daily-enrollment.controller.js"></script>
   <script src="features/finance/ledger.controller.js"></script>
   <script src="features/scholarship/students.controller.js"></script>
   <script src="features/students/students.controller.js"></script>
+  <script src="features/students/checklist.service.js"></script>
   <script src="features/students/viewer.controller.js"></script>
+  <script src="features/students/records.controller.js"></script>
   <!-- Admissions application feature -->
   <script src="features/admissions/apply.controller.js"></script>
 
@@ -123,6 +223,11 @@
   <script src="features/curricula/curricula.service.js"></script>
   <script src="features/curricula/curricula.controller.js"></script>
 
+  <!-- Classlists feature -->
+  <script src="features/classlists/classlists.service.js"></script>
+  <script src="features/classlists/classlists.controller.js"></script>
+  <script src="features/classlists/classlist-edit.controller.js"></script>
+
   <!-- Roles admin feature -->
   <script src="features/roles/roles.service.js"></script>
   <script src="features/roles/roles.controller.js"></script>
@@ -130,6 +235,11 @@
   <!-- System Logs feature -->
   <script src="features/logs/logs.service.js"></script>
   <script src="features/logs/logs.controller.js"></script>
+
+  <!-- Unity feature -->
+  <script src="features/unity/unity.service.js"></script>
+  <!-- Registrar Enlistment feature -->
+  <script src="features/registrar/enlistment/enlistment.controller.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen">
   <!-- Global header -->
