--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -169,6 +169,7 @@
   <script src="core/term.service.js"></script>
   <script src="core/routes.js"></script>
   <script src="core/run.js"></script>
+  <script src="core/toast.service.js"></script>
 
   <!-- Shared components -->
   <script src="shared/components/header/header.controller.js"></script>
@@ -219,6 +220,10 @@
   <script src="features/programs/programs.service.js"></script>
   <script src="features/programs/programs.controller.js"></script>
 
+  <!-- Subjects feature -->
+  <script src="features/subjects/subjects.service.js"></script>
+  <script src="features/subjects/subjects.controller.js"></script>
+
   <!-- Curricula feature -->
   <script src="features/curricula/curricula.service.js"></script>
   <script src="features/curricula/curricula.controller.js"></script>
@@ -227,6 +232,10 @@
   <script src="features/classlists/classlists.service.js"></script>
   <script src="features/classlists/classlists.controller.js"></script>
   <script src="features/classlists/classlist-edit.controller.js"></script>
+
+  <!-- Grading Systems feature -->
+  <script src="features/grading/grading.service.js"></script>
+  <script src="features/grading/grading.controller.js"></script>
 
   <!-- Roles admin feature -->
   <script src="features/roles/roles.service.js"></script>
