--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -220,6 +220,14 @@
   <script src="features/programs/programs.service.js"></script>
   <script src="features/programs/programs.controller.js"></script>
 
+  <!-- Faculty admin feature -->
+  <script src="features/faculty/faculty.service.js"></script>
+  <script src="features/faculty/faculty.controller.js"></script>
+
+  <!-- School Years feature -->
+  <script src="features/school-years/school-years.service.js"></script>
+  <script src="features/school-years/school-years.controller.js"></script>
+
   <!-- Subjects feature -->
   <script src="features/subjects/subjects.service.js"></script>
   <script src="features/subjects/subjects.controller.js"></script>
@@ -232,6 +240,7 @@
   <script src="features/classlists/classlists.service.js"></script>
   <script src="features/classlists/classlists.controller.js"></script>
   <script src="features/classlists/classlist-edit.controller.js"></script>
+  <script src="features/classlists/viewer.controller.js"></script>
 
   <!-- Grading Systems feature -->
   <script src="features/grading/grading.service.js"></script>
