--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -246,6 +246,10 @@
   <script src="features/grading/grading.service.js"></script>
   <script src="features/grading/grading.controller.js"></script>
 
+  <!-- Tuition Years feature (Finance) -->
+  <script src="features/tuition-years/tuition-years.service.js"></script>
+  <script src="features/tuition-years/tuition-years.controller.js"></script>
+
   <!-- Roles admin feature -->
   <script src="features/roles/roles.service.js"></script>
   <script src="features/roles/roles.controller.js"></script>
