--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -130,8 +130,8 @@
         baseRoot = baseRoot.replace(/\/+$/, '');
       }
 
-      var defaultApi = (baseRoot === '/' ? '' : baseRoot) + '/laravel-api/public/api/v1';
-      // var defaultApi = "http://127.0.0.1:8000/api/v1";
+      // var defaultApi = (baseRoot === '/' ? '' : baseRoot) + '/laravel-api/public/api/v1';
+      var defaultApi = "http://127.0.0.1:8000/api/v1";
 
       // Base URL of the Laravel API v1. Can be overridden by setting window.API_BASE before this script.
       window.API_BASE = window.API_BASE || defaultApi;
@@ -246,7 +246,6 @@
   <!-- Classrooms feature -->
   <script src="features/classrooms/classrooms.service.js"></script>
   <script src="features/classrooms/classrooms.controller.js"></script>
-  <script src="features/classrooms/classroom-edit.controller.js"></script>
 
   <!-- Grading Systems feature -->
   <script src="features/grading/grading.service.js"></script>
